# rag-against-the-machine

./: .gitignore  Makefile  README.md  pyproject.toml
src/: __main__.py  chain.py  config.py  logger.py  logging.py  utils.py
src/application/ports/: display.py  index_store.py  llm.py  loader.py  manifest.py  reader.py  storage.py  translator.py
src/application/services/: evaluator.py  indexer.py  manifest.py  retriever.py
src/commands/: index.py  search.py
src/domain/exceptions/: base.py  document.py  schema.py  storage.py
src/domain/models/: answer.py  base.py  chunk.py  dataset.py  document.py  file.py  inference.py  manifest.py  question.py  rag.py  search.py  source.py  student.py
src/entrypoints/: index.py  search.py
src/exceptions/: base.py  document.py  schema.py  storage.py
src/factories/: retriever.py
src/infrastructure/: indexer.py  retriever.py
src/infrastructure/chunks/: json_loader.py  loader.py  reader.py
src/infrastructure/dataset/: json_loader.py  reader.py
src/infrastructure/document/: loader.py  parser.py  splitter.py  text_splitter.py
src/infrastructure/factories/: retriever.py
src/infrastructure/file/: loader.py  local_loader.py  reader.py
src/infrastructure/index_stores/: base.py  registry.py
src/infrastructure/indexers/: indexer.py
src/infrastructure/llm/: qwen.py
src/infrastructure/loaders/: chunks.py  file.py  manifest.py  rag_dataset.py
src/infrastructure/manifest/: json_loader.py  json_storage.py  loader.py  manager.py  repository.py  storage.py
src/infrastructure/repositories/: chunks.py  manifest.py
src/infrastructure/stores/: base.py  bm25.py  chroma.py  raw.py  registry.py
src/models/: chunk.py  manifest.py  stats.py
src/presentation/cli/: answer.py  (+6 more)
src/utils/: common.py  common_util.py  file.py  format.py  path_util.py
(+39 files in other folders)
