[project]
name = "rag-against-the-machine"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bm25s>=0.3.3",
    "fire>=0.7.1",
    "langchain>=1.2.15",
    "langchain-text-splitters>=1.1.1",
    "pydantic>=2.13.2",
    "tqdm>=4.67.3",
]

[dependency-groups]
dev = [
    "flake8>=7.3.0",
    "mypy>=1.19.1",
]

[[tool.mypy.overrides]]
module = "tqdm.*"
ignore_missing_imports = true
